# opencode-registry

./: .gitignore  .stowrc  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DELEGATION_TEST_REPORT_2026-02-26_57d8128.md  LICENSE  README.md  test_delegation.py
bundles/: advanced.yaml  basic.yaml  intermediate.yaml
docs/: AGENT-GUIDE.md  ARCHITECTURE.md  FAQ.md  GETTING-STARTED.md  PERMISSIONS.md  QUICKREF.md  TROUBLESHOOTING.md  VERSIONING.md
docs/reports/: DELEGATION_TEST_REPORT_2026-02-26_57d8128.md
installer/: README.md  pyproject.toml
installer/src/opencode_config/: cli.py  config.py
installer/src/opencode_config/commands/: config.py  info.py  install.py  list_cmd.py  models.py  status.py  sync.py  uninstall.py  update.py
installer/src/opencode_config/utils/: copy.py  installed_db.py  manifest.py  stow.py  template.py  version.py
installer/tests/: README.md  conftest.py  test_config.py  test_copy.py  test_installed_db.py  test_integration_models.py  test_manifest.py  test_template.py  test_version.py
opencode/agents/: ask-me-anything.md  build-backend.md  build-code.md  build-data.md  build-frontend.md  build-general.md  build-infrastructure.md  build-platform.md  debug.md  plan-architecture.md  plan-brainstorm.md  plan-code-review.md  plan-debug.md  plan-design.md  review.md
opencode/agents/_shared/: README.md  communication-style.md  context-management.md  delegation-rules.md  production-safety-protocol.md
opencode/commands/: commit.md  documentation.md  kb.md
opencode/skills/content-research-writer/: NOTICE.txt  (+1 more)
scripts/: add_model_tiers.py
(+46 files in other folders)
